fix Background image overlapping tiers card button

--- a/packages/website/pages/tiers.scss
+++ b/packages/website/pages/tiers.scss
@@ -310,6 +310,6 @@
     z-index: 1;
     opacity: 0.25;
     filter: blur(40px);
-    transform: rotate(-160deg);
+    transform: rotate(-165deg);
   }
 }
